# hospital-management-system

./: .dockerignore  .env.docker  .env.example  .env.production  .gitignore  ACTION-BUTTONS-FIX.md  AGENT_TEST_CASES.md  AI_INTENT_DETECTION_TEST.md  ASSIGNMENT_FIXES_COMPLETED.md  ASSIGNMENT_TESTING_READY.md  ASSIGNMENT_TESTING_RESULTS.md  AWS-DEPLOYMENT-COMPLETE.md  AWS-DEPLOYMENT-GUIDE.md  AWSCLIV2.msi  BED_401A_TEST_GUIDE.md  BED_STATUS_REAL_TIME_UPDATE_SOLUTION.md  CHROMADB_COMPREHENSIVE_PERMISSION_FIX.md  CI-CD-SETUP.md  COMPLETE-DEPLOYMENT-GUIDE.md  COMPLETE_WORKFLOW_VERIFICATION.md  COMPREHENSIVE_IMPLEMENTATION_STATUS.md  COMPREHENSIVE_TEST_CASES.md  COMPREHENSIVE_TEST_REPORT.md  CONVERSATIONAL_MEMORY_VERIFICATION_REPORT.md  DATABASE_SCHEMA_COMPLETE.md  DEPLOYMENT-ERROR-FIXES.md  DEPLOYMENT-FILES.md  DEPLOYMENT-FIXES.md  DEPLOYMENT.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_EMAIL_CONFIG.md  DISCHARGE_REPORT_GUIDE.md  DISCHARGE_WORKFLOW_GUIDE.md  DROPDOWN-SAFETY-FIXES.md  EC2-DISK-SPACE-GUIDE.md  EMAIL-DEPLOYMENT-FIX.md  EMAIL-TROUBLESHOOTING.md  EMAIL_DEPLOYMENT_ACTION_PLAN.md  EQUIPMENT-TOOLS-VERIFICATION.md  EQUIPMENT-USAGE-RESOLUTION.md  (+183 more)
aws-setup/: complete-setup.bat  create-task-definition-windows.bat  (+5 more)
backend-python/: .dockerignore  .env  .env.example  CLIENT_USAGE_GUIDE.md  CRUD_OPERATIONS_GUIDE.md  Dockerfile  GOOGLE_MEET_SETUP.md  LLM_INTEGRATION.md  MANUAL_CRUD_GUIDE.md  MASTER_DATA_CRUD_GUIDE.md  POSTGRESQL_SETUP.md  README-MULTI-AGENT.md  README.md  USAGE.md  chatbot_server.py  check_db_structure.py  check_extracted_data.py  check_medical_history.py  check_meetings.py  check_new_meetings.py  check_patient.py  claude_desktop_config_corrected.json  client.py  client_comprehensive.py  complete_oauth_setup.py  complete_post_admission_demo.py  comprehensive_integration_test.py  comprehensive_server.py  comprehensive_workflow_test.py  create_discharge_scenario.py  create_meetings_tables.py  create_new_tables.py  create_sample_data.py  create_sample_supply_usage.py  create_supply_data.py  create_treatment_final.py  create_treatment_fixed.py  create_treatment_record.py  credentials.json  data_backup.json  (+146 more)
backend-python/agents/: __init__.py  ai_clinical_assistant_agent.py  appointment_agent.py  base_agent.py  dashboard_agent.py  dashboard_agent_backup.py  department_agent.py  discharge_agent.py  enhanced_ai_clinical.py  enhanced_orchestrator_agent.py  equipment_agent.py  equipment_lifecycle_agent.py  google_meet_api.py  inventory_agent.py  langraph_workflows.py  master_integration_system.py  medical_document_agent.py  meeting_agent.py  multilingual_support_agent.py  orchestrator_agent.py  patient_agent.py  patient_supply_usage_agent.py  predictive_analytics_agent.py  real_time_monitoring_agent.py  room_bed_agent.py  staff_agent.py  user_agent.py
backend-python/backend_python.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend-python/chroma_db/: chroma.sqlite3
backend-python/data/: users.json
(+120 files in other folders)
