[project]
name = "backend-python"
version = "0.1.0"
description = "Hospital Management System MCP Server using FastMCP"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mcp[cli]",
    "pydantic>=2.0.0",
    "fastmcp>=0.2.0",
    "google-generativeai>=0.8.0",
    "prompt-toolkit>=3.0.0",
    "python-dotenv>=1.0.0",
    "inquirer>=3.0.0",
]
