[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "backend-python"
version = "0.1.0"
description = "Hospital Management System MCP Server using FastMCP"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mcp[cli]>=1.0.0",
    "pydantic>=2.0.0",
    "fastmcp>=0.2.0",
    "google-generativeai>=0.8.0",
    "prompt-toolkit>=3.0.0",
    "python-dotenv>=1.0.0",
    "inquirer>=3.0.0",
    "streamlit>=1.47.1",
    "protobuf==3.20.3",
    "psycopg2-binary>=2.9.0",
    "sqlalchemy>=2.0.0",
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    # Google API Dependencies for Calendar and Meet Integration
    "google-auth>=2.0.0",
    "google-auth-oauthlib>=1.0.0",
    "google-auth-httplib2>=0.2.0",
    "google-api-python-client>=2.0.0",
    # Medical Document Processing Dependencies
    "python-multipart>=0.0.6",
    "pytesseract>=0.3.10",
    "opencv-python>=4.8.0",
    "pdf2image>=1.17.0",
    "pillow>=10.0.0",
    "pypdf>=4.0.0",
    # Vector Database for RAG
    "chromadb>=0.4.0",
    # Temporarily commented out for deployment - large model dependencies
    # "sentence-transformers>=2.2.0",
    # AI/ML Processing
    # "transformers>=4.35.0",
    # "torch>=2.1.0",
    "numpy>=1.24.0",
    # File handling and utilities
    "aiofiles>=23.0.0",
    "python-magic>=0.4.27",
    "filetype>=1.2.0",
    # Date and text processing
    "python-dateutil>=2.8.0",
    # HTTP requests for testing and API calls
    "requests>=2.31.0",
    # Temporarily commented out for deployment - large NLP model
    # "spacy>=3.7.0",
    "regex>=2023.0.0",
     # Document generation and markdown processing
    "reportlab>=4.0.0",
    "markdown2>=2.4.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["agents*"]
exclude = ["hospital_env*", "data*", "__pycache__*"]
